--- a/README.Rmd
+++ b/README.Rmd
@@ -17,10 +17,12 @@ cat(c("# ", paste(trimws(strsplit(title, "\n")[[1]]), collapse = " ")))
 
 [![Github Action](https://github.com/randy3k/collections/workflows/build/badge.svg?branch=master)](https://github.com/randy3k/collections)
 [![codecov](https://codecov.io/gh/randy3k/collections/branch/master/graph/badge.svg)](https://codecov.io/gh/randy3k/collections)
-[![CRAN\_Status\_Badge](http://www.r-pkg.org/badges/version/collections)](https://cran.r-project.org/package=collections)
-[![](http://cranlogs.r-pkg.org/badges/grand-total/collections)](https://cran.r-project.org/package=collections)
+[![CRAN\_Status\_Badge](https://www.r-pkg.org/badges/version/collections)](https://cran.r-project.org/package=collections)
+[![](https://cranlogs.r-pkg.org/badges/grand-total/collections)](https://cran.r-project.org/package=collections)
 
-Documentation: [http://randy3k.github.io/collections](https://randy3k.github.io/collections)
+Github: [https://github.com/randy3k/collections](https://github.com/randy3k/collections)
+
+Documentation: [https://randy3k.github.io/collections](https://randy3k.github.io/collections)
 
 ```{r results="asis", echo = FALSE, eval = TRUE}
 cat(d[colnames(d) == "Description"])
