--- a/README.Rmd
+++ b/README.Rmd
@@ -81,12 +81,12 @@ pq$pop()
 pq$pop()
 ```
 
-Dictionary. Comparing to R envrionments, `dict()` does not [leak memory](https://r-lib.github.io/fastmap/#memory-leak-examples) and supports hashing functions and environments.
+Dictionary. Comparing to R envrionments, `dict()` does not [leak memory](https://r-lib.github.io/fastmap/#memory-leak-examples) and supports hashing any R objects.
 ```{r}
 d <- dict()
 e <- new.env()
-d$set(e, 1)$set(sum, 2)
-d$get(e)
+d$set(e, 1)$set(sum, 2)$set(c(1L, 2L), 3)
+d$get(c(1L, 2L))
 ```
 
 Ordered Dictionary
