--- a/README.Rmd
+++ b/README.Rmd
@@ -81,7 +81,7 @@ pq$pop()
 pq$pop()
 ```
 
-Dictionary. Comparing to R envrionments, `dict()` does not [leak memory](https://r-lib.github.io/fastmap/#memory-leak-examples) and supports not only character keys.
+Dictionary. Comparing to R envrionments, `dict()` does not [leak memory](https://r-lib.github.io/fastmap/#memory-leak-examples) and supports various other types of keys.
 ```{r}
 d <- dict()
 e <- new.env()
