--- a/README.Rmd
+++ b/README.Rmd
@@ -1,7 +1,6 @@
 ---
 output:
-  reprex::reprex_document:
-    advertise: false
+  github_document:
     html_preview: false
 ---
 <!-- README.md is generated from README.Rmd. Please edit that file -->
@@ -15,7 +14,7 @@ title <- d[colnames(d) == "Title"]
 cat(c("# ", paste(trimws(strsplit(title, "\n")[[1]]), collapse = " ")))
 ```
 
-[![Github Action](https://github.com/randy3k/collections/workflows/build/badge.svg?branch=master)](https://github.com/randy3k/collections)
+[![check](https://github.com/randy3k/collections/actions/workflows/check.yaml/badge.svg)](https://github.com/randy3k/collections/actions/workflows/check.yaml)
 [![codecov](https://codecov.io/gh/randy3k/collections/branch/master/graph/badge.svg)](https://codecov.io/gh/randy3k/collections)
 [![CRAN\_Status\_Badge](https://www.r-pkg.org/badges/version/collections)](https://cran.r-project.org/package=collections)
 [![](https://cranlogs.r-pkg.org/badges/grand-total/collections)](https://cran.r-project.org/package=collections)
