--- a/README.Rmd
+++ b/README.Rmd
@@ -15,7 +15,7 @@ cat(c("# ", paste(trimws(strsplit(title, "\n")[[1]]), collapse = " ")))
 ```
 
 [![R-CMD-check](https://github.com/randy3k/collections/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/randy3k/collections/actions/workflows/R-CMD-check.yaml)
-[![codecov](https://codecov.io/gh/randy3k/collections/branch/master/graph/badge.svg?token=ummdWzk2eR)](https://codecov.io/gh/randy3k/collections)
+[![codecov](https://codecov.io/gh/randy3k/collections/branch/master/graph/badge.svg?token=ummdWzk2eR)](https://app.codecov.io/gh/randy3k/collections)
 [![CRAN_Status_Badge](https://www.r-pkg.org/badges/version/collections)](https://cran.r-project.org/package=collections)
 [![](https://cranlogs.r-pkg.org/badges/grand-total/collections)](https://cran.r-project.org/package=collections)
 
